static/css/style.css
@import url('https://fonts.googleapis.com/css2?family=Dongle&family=Indie+Flower&family=Montserrat:wght@400&display=swap');

/*-- 404 Page Styling --*/

#page404 {
    font-family: 'Dongle', 'sans-serif';
    background-image: none;
}

#box404 {
    display: flex;
    height: 100vh;
    justify-content: center;
    align-items: center;
    flex-direction: column;
    font-size: 35px;
}
.header-404 {
    font-family: 'Dongle', cursive;
    font-size: 70px;
}

.content-404 {
    text-align: center;
}

/* -- Various styling -- */

body {
    display: flex;
    min-height: 100vh;
    flex-direction: column;
    font-family: 'Montserrat', 'sans-serif';
}

/* -- Fixes a spacing issue
found in Chrome Dev Tools  -- */
main {
    flex: 1 0 auto;
}

.whitespace {
    white-space: pre-wrap;
}

.brand-logo {
    margin-left: 20px;
}

.font-style {
    font-family: 'Montserrat', 'sans-serif';
}

/* -- Landing page -- */

.container {
    position: relative;
    text-align: center;
    color: white;
}

.landing-page {
    height: 100vh;
    width: 100vw;
    background: url("../images/landing.jpg") center center;
    background-size: cover;
    opacity: 0.9;
    filter: brightness(80%);
}

.heading1 {
    position: absolute;
    font-weight: 600;
    left: 10%;
    margin-right: 25px;
    top: 30%;
}

.heading2 {
    position: absolute;
    bottom: 150px;
    margin: 0 20px;
}

/* -- Various titles across the site -- */

#register-title, #registration, #login-title,
#categories, #recipes-title, #add-title {
    color: #9e9e9e;
}

#registration {
    font-size: 20px;
}

.card-title {
    margin-top: 0;
    padding: 20px;
    color: white;
}

#vegan-title, #meat-title {
    color: black;
}

/* -- Footer styling -- */

#signup {
    color: white;
    text-decoration: underline 2px;
}

#signup:hover {
    color: #9e9e9e;
}

.page-footer {
    padding-top: 0px;
}

#social-links i {
    font-size: 3rem;
    padding-left: 10px;
    padding-right: 10px;
}

#social-links i:hover {
    color: #9e9e9e;
}

/* -- Media Queries -- */

@media screen and (max-width: 992px) {
    .hidden {
        display: none;
    }

    .brand-logo {
        margin-left: 0;
        left: 30%;
    }
}

@media screen and (max-width: 382px) {
    .brand-logo {
        font-size: 2rem;
    }
}

